--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+./env/app.env
+.env/mysql.env
 
 ### STS ###
 .apt_generated
@@ -30,5 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-./env
-./mysql-data
